Add logo to nav

--- a/pythonsd/sass/pythonsd.scss
+++ b/pythonsd/sass/pythonsd.scss
@@ -1,3 +1,8 @@
 $brand-primary:         darken(#3776ab, 6.5%);
 
 @import 'bootstrap';
+
+.navbar-brand > img {
+  display: inline;
+  height: 20px;
+}
