Update the github org

--- a/pythonsd/templates/pythonsd/base.html
+++ b/pythonsd/templates/pythonsd/base.html
@@ -62,7 +62,7 @@
           <ul class="list-inline">
             <li class="list-inline-item"><a href="https://twitter.com/sandiegopython" rel="nofollow noopener noreferrer"><span class="fa fa-twitter fa-2x text-muted" aria-hidden="true"></span></a></li>
             <li class="list-inline-item"><a href="https://www.meetup.com/pythonsd/" rel="nofollow noopener noreferrer"><span class="fa fa-meetup fa-2x text-muted" aria-hidden="true"></span></a></li>
-            <li class="list-inline-item"><a href="https://github.com/pythonsd/" rel="nofollow noopener noreferrer"><span class="fa fa-github fa-2x text-muted" aria-hidden="true"></span></a></li>
+            <li class="list-inline-item"><a href="https://github.com/sandiegopython/" rel="nofollow noopener noreferrer"><span class="fa fa-github fa-2x text-muted" aria-hidden="true"></span></a></li>
             <li class="list-inline-item"><a href="https://pythonsd-slack.herokuapp.com/" rel="nofollow noopener noreferrer"><span class="fa fa-slack fa-2x text-muted" aria-hidden="true"></span></a></li>
             <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCXU-oZwaHnoYUhja_yrrrGg" rel="nofollow noopener noreferrer"><span class="fa fa-youtube fa-2x text-muted" aria-hidden="true"></span></a></li>
           </ul>
