--- a/pythonsd/templates/pythonsd/code-of-conduct.html
+++ b/pythonsd/templates/pythonsd/code-of-conduct.html
@@ -13,7 +13,7 @@
 
 <p>This code of conduct applies to all spaces managed by San Diego Python. This includes IRC/Slack, mailing lists, and San Diego Python events. In addition, violations of this code outside these spaces may affect a person's ability to participate within them.</p>
 
-<p>If you believe someone is violating the code of conduct, we ask that you report it by emailing <a href="sandiegopython-conduct@googlegroups.com">sandiegopython-conduct@googlegroups.com</a>.</p>
+<p>If you believe someone is violating the code of conduct, we ask that you report it by emailing <a href="mailto:sandiegopython-conduct@googlegroups.com">sandiegopython-conduct@googlegroups.com</a>.</p>
 
 <ul>
   <li><strong>Be friendly and patient.</strong></li>
@@ -34,7 +34,7 @@
   <li><strong>When we disagree, try to understand why.</strong> Disagreements, both social and technical, happen all the time and San Diego Python is no exception. It is important that we resolve disagreements and differing views constructively. Remember that we're different. The strength of San Diego Python comes from its varied community, people from a wide range of backgrounds. Different people have different perspectives on issues. Being unable to understand why someone holds a viewpoint doesn't mean that they're wrong. Don't forget that it is human to err and blaming each other doesn't get us anywhere, rather offer to help resolving issues and to help learn from mistakes.</li>
 </ul>
 
-<p>If you have questions about this code of conduct, don't hesitate to contact the <a href="sandiegopython-conduct@googlegroups.com">Python SD Code of Conduct Committee</a>.</p>
+<p>If you have questions about this code of conduct, don't hesitate to contact the <a href="mailto:sandiegopython-conduct@googlegroups.com">Python SD Code of Conduct Committee</a>.</p>
 
 <p>Our Code of Conduct Committee consists of the following individuals: <a href="https://www.meetup.com/pythonsd/members/35674822/" rel="nofollow noopener noreferrer">Alain Domissy</a>, <a href="https://www.meetup.com/pythonsd/members/35125652/" rel="nofollow noopener noreferrer">David Fischer</a>, <a href="https://www.meetup.com/pythonsd/members/153989962/" rel="nofollow noopener noreferrer">Melanie Crutchfield</a>, and <a href="https://www.meetup.com/pythonsd/members/13614009/" rel="nofollow noopener noreferrer">Trey Hunner</a>.</p>
 
