Replace slack link with Discord

--- a/pythonsd/templates/pythonsd/index.html
+++ b/pythonsd/templates/pythonsd/index.html
@@ -25,9 +25,8 @@
         </div>
 
         <div class="col-lg-4">
-          <h3 id="slack-channel">Join us on Slack</h3>
-          <p>Meetup events aren't the only time for chatting. There's also a Slack channel. Sign on to ask questions, give answers, or just hang out. San Diego Python's Slack channel is available at <a href="https://pythonsd.slack.com/" rel="nofollow noopener noreferrer">pythonsd.slack.com</a>. Use <a href="https://pythonsd-slack.herokuapp.com/" rel="nofollow noopener noreferrer">this page</a> to get an invite to create your account. Slack is great place to promote a job posting at your company.</p>
-          <p>For those who prefer IRC, our Slack channel is mirrored to #sandiegopython on FreeNode.</p>
+          <h3 id="discord">Join us on Discord</h3>
+          <p>Meetup events aren't the only time for chatting. There's also a Discord server. Sign on to ask questions, give answers, or just hang out. San Diego Python's Discord server is available at <a href="https://discord.gg/8GpWuVvdbQ" rel="nofollow noopener noreferrer">https://discord.gg/8GpWuVvdbQ</a>. The #jobs channel in Discord is great place to promote a job posting at your company.</p>
         </div>
 
         <div class="col-lg-4">
