Add Microsoft as a sponsor

--- a/pythonsd/templates/pythonsd/index.html
+++ b/pythonsd/templates/pythonsd/index.html
@@ -68,10 +68,10 @@
         </li>
 
         <li class="media">
-          <img src="{% static 'img/sponsors/cloudflare-logo.png' %}" class="mr-3" alt="Cloudflare">
+          <img src="{% static 'img/sponsors/microsoft-logo.png' %}" class="mr-3" alt="Microsoft">
           <div class="media-body">
-            <h5 class="mt-0 mb-1"><a href="https://www.cloudflare.com/" rel="nofollow noopener noreferrer">Cloudflare</a></h5>
-            <p class="m-0">Cloudflare provides pizza at our monthly meetup</p>
+            <h5 class="mt-0 mb-1"><a href="https://www.microsoft.com/" rel="nofollow noopener noreferrer">Microsoft</a></h5>
+            <p class="m-0">Microsoft sponsors food at our monthly meetup</p>
           </div>
         </li>
 
