--- a/assets/src/sass/_theme.scss
+++ b/assets/src/sass/_theme.scss
@@ -7,3 +7,17 @@
 .jumbotron {
   background: center / cover no-repeat url(../img/saturday-group-background.jpg);
 }
+
+
+// https://fontawesome.com/docs/web/add-icons/svg-bare
+.icon {
+  width: 1rem;
+  height: 1rem;
+  vertical-align: -.125rem;
+}
+
+.icon-2x {
+  width: 2rem;
+  height: 2rem;
+  vertical-align: -.25rem;
+}
