Add donation link

--- a/pythonsd/templates/pythonsd/index.html
+++ b/pythonsd/templates/pythonsd/index.html
@@ -73,6 +73,8 @@
             </li>
           </ul>
 
+          <p class="small">You can <a href="https://psfmember.org/civicrm/contribute/transact/?reset=1&id=9">donate to San Diego Python</a> through the PSF. Your donation may be tax deductible. All donations go toward events, workshops, and training materials.</p>
+
         </div> <!-- /col -->
 
         <div class="col-lg-6">
