--- a/pythonsd/templates/pythonsd/index.html
+++ b/pythonsd/templates/pythonsd/index.html
@@ -40,7 +40,7 @@
     </section>
 
     {# Sponsors #}
-    <section class="mb-3">
+    <section class="mb-3" id="sponsors">
       <div class="row">
         <div class="col-lg-6">
 
@@ -57,10 +57,10 @@
             </li>
 
             <li class="media">
-              <img src="{% static 'img/sponsors/microsoft-logo.png' %}" class="mr-3" alt="Microsoft">
+              <img src="{% static 'img/sponsors/neo4j-logo.png' %}" class="mr-3" alt="Neo4j">
               <div class="media-body">
-                <h5 class="mt-0 mb-1"><a href="https://www.microsoft.com/" rel="nofollow noopener noreferrer">Microsoft</a></h5>
-                <p class="m-0">Microsoft sponsors food at our monthly meetup</p>
+                <h5 class="mt-0 mb-1"><a href="https://neo4j.com/" rel="nofollow noopener noreferrer">Neo4j</a></h5>
+                <p class="m-0">Neo4j is providing food at our monthly meetup</p>
               </div>
             </li>
 
