--- a/pythonsd/templates/pythonsd/base.html
+++ b/pythonsd/templates/pythonsd/base.html
@@ -25,12 +25,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     {% url 'index' as index_url %}
     {% if request.path == index_url %}
-      <a class="navbar-brand" href="#">
+		<img src="{% static 'img/sandiegopython-logo.svg' %}" id="navbar-logo" class="navbar-brand" alt="San Diego Python Home">
     {% else %}
       <a class="navbar-brand" href="{{ index_url }}">
-    {% endif %}
-        <img src="{% static 'img/sandiegopython-logo.svg' %}" alt="San Diego Python Home">
+		<img src="{% static 'img/sandiegopython-logo.svg' %}" id="navbar-logo" alt="San Diego Python Home">
       </a>
+    {% endif %}
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-expand" aria-controls="navbars-expand" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
