feat: add database-driven organizer page

--- a/pythonsd/templates/pythonsd/base.html
+++ b/pythonsd/templates/pythonsd/base.html
@@ -39,9 +39,9 @@
           <!-- <li class="nav-item">
             <a class="nav-link" href="#">Support Us</a>
           </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">Organizers</a>
-          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'organizers' %}">Organizers</a>
+          </li>
         </ul>
       </div>
     </nav>
