Switching to tailwind

--- a/pythonsd/templates/pythonsd/code-of-conduct.html
+++ b/pythonsd/templates/pythonsd/code-of-conduct.html
@@ -2,7 +2,8 @@
 
 
 {% block main %}
-<div class="container mt-3">
+<div class="container mt-4">
+
 <h1>Code of Conduct</h1>
 
 <p>San Diego Python is a community intended for learning, networking, and collaboration and has members with different backgrounds and perspectives from all over the greater San Diego area and beyond.</p>
@@ -15,12 +16,12 @@
 
 <p>If you believe someone is violating the code of conduct, we ask that you report it by emailing <a href="mailto:sandiegopython-conduct@googlegroups.com">sandiegopython-conduct@googlegroups.com</a>.</p>
 
-<ul>
+<ul class="list-disc list-inside ps-5">
   <li><strong>Be friendly and patient.</strong></li>
   <li><strong>Be welcoming.</strong> We strive to be a community that welcomes and supports people of all backgrounds and identities. This includes, but is not limited to members of any race, ethnicity, culture, national origin, color, immigration status, social and economic class, educational level, sex, sexual orientation, gender identity and expression, age, size, family status, political belief, religion, and mental and physical ability.</li>
   <li><strong>Be respectful.</strong> Not all of us will agree all the time, but disagreement is no excuse for poor behavior and poor manners. We might all experience some frustration now and then, but we cannot allow that frustration to turn into a personal attack. It's important to remember that a community where people feel uncomfortable or threatened is not a productive one. Members of San Diego Python should be respectful when dealing with other members as well as with people outside of the San Diego Python community.</li>
   <li><strong>Be careful in the words that you choose.</strong> We are a community of members with a wide range of backgrounds, but we conduct ourselves professionally. Be kind to others. Do not insult or put down other members. Harassment and other exclusionary behavior aren't acceptable. This includes, but is not limited to:
-    <ul>
+    <ul class="list-[circle] list-inside ps-5">
       <li>Violent threats or language directed against another person.</li>
       <li>Discriminatory jokes and language.</li>
       <li>Posting sexually explicit or violent material.</li>
@@ -38,8 +39,6 @@
 
 <p>Our Code of Conduct Committee consists of the following individuals: <a href="https://www.meetup.com/pythonsd/members/35674822/" rel="nofollow noopener noreferrer">Alain Domissy</a>, <a href="https://www.meetup.com/pythonsd/members/35125652/" rel="nofollow noopener noreferrer">David Fischer</a>, <a href="https://www.meetup.com/pythonsd/members/153989962/" rel="nofollow noopener noreferrer">Melanie Crutchfield</a>, and <a href="https://www.meetup.com/pythonsd/members/13614009/" rel="nofollow noopener noreferrer">Trey Hunner</a>.</p>
 
-<hr>
-
-<p>This code of conduct was adapted from the <a href="https://www.djangoproject.com/conduct/" rel="nofollow noopener noreferrer">Django community code of conduct</a>.</p>
+<p class="text-sm italic">This code of conduct was adapted from the <a href="https://www.djangoproject.com/conduct/" rel="nofollow noopener noreferrer">Django community code of conduct</a>.</p>
 </div>
 {% endblock main %}
