Handle uploading organizer photos

--- a/assets/src/sass/_theme.scss
+++ b/assets/src/sass/_theme.scss
@@ -16,6 +16,12 @@
   vertical-align: -.125rem;
 }
 
+.icon-1-5x {
+  width: 1.5rem;
+  height: 1.5rem;
+  vertical-align: -.125rem;
+}
+
 .icon-2x {
   width: 2rem;
   height: 2rem;
