Fixes around using a custom domain with S3/R2
- Set both `MEDIA_URL` and `AWS_S3_CUSTOM_DOMAIN`.
  This ensures that both using `MEDIA_URL` or
  using `file.url` work well

--- a/pythonsd/templates/pythonsd/organizers.html
+++ b/pythonsd/templates/pythonsd/organizers.html
@@ -1,5 +1,4 @@
 {% extends 'pythonsd/base.html' %}
-{% load static %}
 
 
 {% block title %}Organizers{% endblock title %}
@@ -17,7 +16,7 @@
   {% for organizer in organizers %}
   <div class="col mb-4">
     <div class="card">
-      <img src="{% get_media_prefix %}{{ organizer.photo.name }}" class="card-img-top" alt="{{ organizer.name }}">
+      <img src="{{ organizer.photo.url }}" class="card-img-top" alt="{{ organizer.name }}">
       <div class="card-body">
         <h5 class="card-title">{{ organizer.name }}</h5>
         <p class="card-text">{{ organizer.description }}</p>
