--- a/pythonsd/templates/pythonsd/code-of-conduct.html
+++ b/pythonsd/templates/pythonsd/code-of-conduct.html
@@ -1,6 +1,9 @@
 {% extends 'pythonsd/base.html' %}
 
 
+{% block title %}Code of Conduct{% endblock title %}
+
+
 {% block main %}
 <div class="container mt-3">
 <h1>Code of Conduct</h1>
