Remove Hyperscript from Tailwind migration
- Menu toggle is handled by custom JS

--- a/pythonsd/templates/pythonsd/base.html
+++ b/pythonsd/templates/pythonsd/base.html
@@ -29,7 +29,7 @@
         </a>
 
         <!-- Navigation menu toggle -->
-        <div id="navigation-toggle" class="h-6 w-6 cursor-pointer md:hidden block text-slate-100" _="on click toggle .hidden on #navigation-menu">
+        <div id="navigation-toggle" class="h-6 w-6 cursor-pointer md:hidden block text-slate-100">
           <svg xmlns="http://www.w3.org/2000/svg" id="menu-button" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
@@ -107,7 +107,7 @@
     </footer>
 
     <script src="{% static 'htmx.min.js' %}"></script>
-    <script src="{% static '_hyperscript.min.js' %}"></script>
+    <script src="{% static 'main.js' %}"></script>
 
   </body>
 </html>
