Slight refactor of custom JS
- Move under the pythonsd/ directory where the template that uses it
  lives
- Remove copying static files in package.json.
  Not needed after moving the main.js
- Remove logging when debug false (can't get errors otherwise)

--- a/pythonsd/templates/pythonsd/base.html
+++ b/pythonsd/templates/pythonsd/base.html
@@ -107,7 +107,7 @@
     </footer>
 
     <script src="{% static 'htmx.min.js' %}"></script>
-    <script src="{% static 'main.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 
   </body>
 </html>
