--- a/pythonsd/templates/pythonsd/base.html
+++ b/pythonsd/templates/pythonsd/base.html
@@ -106,8 +106,8 @@
 
     </footer>
 
+    <script src="{% static 'js/main.js' %}" async></script>
     <script src="{% static 'htmx.min.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
 
   </body>
 </html>
