--- a/pythonsd/templates/pythonsd/index.html
+++ b/pythonsd/templates/pythonsd/index.html
@@ -58,7 +58,7 @@
           <img src="{% static 'img/sponsors/neo4j-logo.png' %}" class="flex-none h-16" alt="Neo4j">
           <figcaption class="flex-auto">
             <h5 class="mt-0 mb-1"><a href="https://neo4j.com/" rel="nofollow noopener noreferrer">Neo4j</a></h5>
-            <p class="m-0">Neo4j is providing food at our monthly meetup</p>
+            <p class="m-0">Neo4j is providing food at our monthly meetup.</p>
           </figcaption>
         </figure>
 
